crates/oxc_react_compiler/tests/snapshots/error.mutate-function-property.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.mutate-function-property.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("value cannot be modified"), span: Span { start: 87, end: 97 }, primary: false }], help: Some("This modifies a variable that React considers immutable"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
