crates/oxc_react_compiler/tests/snapshots/error.mutate-global-increment-op-invalid-react.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.mutate-global-increment-op-invalid-react.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: (BuildHIR::lowerExpression) Support UpdateExpression where argument is a global", labels: [LabeledSpan { label: None, span: Span { start: 45, end: 58 }, primary: false }], help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
