crates/oxc_react_compiler/tests/snapshots/error.mutate-property-from-global.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.mutate-property-from-global.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("value cannot be modified"), span: SourceSpan { offset: 41, length: 3 }, primary: false }], help: Some("Modifying a variable defined outside a component or hook is not allowed. Consider using an effect"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
